removing and updating some features.

--- a/css/media-style.css
+++ b/css/media-style.css
@@ -137,7 +137,7 @@
 
   .about-content p {
     width: 85%;
-    text-align: left;
+    text-align: justify !important;
   }
 
   .about-content a {
