update latest projects

--- a/css/style.css
+++ b/css/style.css
@@ -463,8 +463,9 @@ header {
 }
 
 .project-description p {
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
   font-size: 0.9rem;
+  line-height: 2;
 }
 
 .project-tools {
