--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ header {
   margin: 0 auto 1.5em;
   color: black;
   padding: 0.5em;
-  width: 50%;
+  max-width: 60%;
 }
 
 .project-description a:last-child {
