--- a/css/media-style.css
+++ b/css/media-style.css
@@ -119,50 +119,55 @@
   }
 
   /* About */
+
+  #about {
+    margin-top: 5em;
+  }
   .about-content {
     display: flex;
     justify-content: space-between;
   }
 
-  .about-content img {
-    width: 50%;
-    height: 80vh;
-    object-fit: cover;
-    object-position: center;
-  }
 
-  .about-texts {
-    width: 60%;
-    max-width: 400px;
+  .about-content img {
+    width: 400px;
+    height: 400px;
+    margin: 0 0 3em;
   }
 
   .about-content p {
-    width: 85%;
-    text-align: justify !important;
+    font-size: 0.9rem;
+    margin: auto;
+    line-height: 1.7;
+    letter-spacing: 0.1rem;
   }
 
-  .about-content a {
-    text-align: left !important;
-    display: block;
-    width: 85%;
-    margin: auto;
+  .about-profile {
+    width: 50%;
   }
+
+
 
   /* Skills */
 
-  .skills {
-    width: 60%;
+
+  table.skills-table {
+    display: table;
+    border-collapse: collapse;
+    margin: 0 auto;
   }
 
-  .skills-bar {
-    display: flex;
-    justify-content: space-between;
+
+  .skills-list {
+    display: none;
   }
 
-  .skills-bar div {
-    margin-bottom: 0;
+  tr,th {
+    border: 1px solid #dddddd;
+    padding: 0.5em;
   }
-  
+
+
 
   /* Services */
 
@@ -232,11 +237,6 @@
     width: 80%;
   }
 
-  /* About */
-
-  .about-texts {
-    padding-top: 1em;
-  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -253,10 +253,8 @@
     width: 70%;
   }
 
-  /* About */
-  .about-texts {
-    padding-top: 1.5em;
-  }
+
+
 
   footer {
     padding: 2em 4em 1em;
