--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ header {
   height: 100vh;
   background: var(--bgColor);
   display: grid;
-  grid-template-rows: auto 4fr 0.3fr;
+  grid-template-rows: auto 4fr 1.5fr;
   transition: all 0.3s linear;
   transform: translate(-100%);
   z-index: 99;
@@ -242,7 +242,7 @@ header {
 }
 
 .section-header hr {
-  width: 10%;
+  width: 15%;
   margin: 0 auto 3.5em;
   border: 2px solid var(--primaryColor);
 }
@@ -250,7 +250,7 @@ header {
 /* About Section */
 
 #about {
-  margin-top: 5em;
+  margin-top: 3em;
 }
 
 .about-content img {
@@ -306,8 +306,26 @@ header {
   font-size: 0.95rem;
 }
 
-.skills-table {
-  display: none;
+
+
+
+table.skills-table {
+  display: table;
+  border-collapse: collapse;
+  margin: 0 auto;
+}
+
+
+
+tr,th {
+  border: 1px solid #dddddd;
+  padding: 0.5em;
+  font-size: 0.9rem;
+  font-weight: 400;
+}
+
+th:hover {
+  background-color: rgba(4, 194, 201, 0.7);
 }
 
 
@@ -341,7 +359,8 @@ header {
 
 .project-card {
   margin: 0 0 3em;
-  height: 60vh;
+  width: 100%;
+  height: 50vh;
   position: relative;
   text-align: center;
   transition: all 0.5s 0.3s ease-in-out;
@@ -352,7 +371,8 @@ header {
 }
 
 .project-card img {
-  height: 60vh;
+  width: 100%;
+  height: 50vh;
   object-fit: cover;
   transition: all 0.5s 0.3s ease-in-out;
 }
@@ -415,6 +435,90 @@ header {
 
 .project-btn span {
   margin-right: 0.2em;
+}
+
+
+
+/* Testimonials section */
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 600px;
+  margin: auto;
+}
+
+.client-header {
+  margin: 0 auto 0.8em;
+ 
+}
+
+.client-img {
+  width: 100px;
+  border-radius: 100%;
+  margin: auto;
+  margin-bottom: 1em;
+}
+
+.client-header p {
+margin-top: 0.7em;
+font-size: 0.8rem;
+color: var(--secondaryColor);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 0.9rem;
+  line-height: 1.8;
+  letter-spacing: 1.2px;
+  margin-bottom: 1.5em;
+  
+}
+
+/* Hide the testimonials by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  width: auto;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius:  3px;
+  user-select: none;
+  margin: 1em;
+}
+
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: var(--secondaryColorHex);
+}
+
+
+
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 0.8s;
+  animation-name: fade;
+  animation-duration: 0.8s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
 /* Contacts Section */
